2009-11-17 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-00-06
	* remove some rare deadlocks causing problems in stop
	
2009-11-09 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-00-05
	* update HLT menu upon reconfiguration on start

2009-11-09 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-00-04
	* fix one deadlock in slave and stuck summarize loop in stopping
	
2009-11-06 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-00-03
	* flashlist available at initialization time
	* improve stability of stop transition
	* cleanup printouts
	* fix deadlock of scalers update when some process crashes
	
2009-11-02 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-00-02
	* fix bug for LS timeouts causing lock to be acquired twice

2009-10-28 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-00-01
	* various improvements and fixes

2009-10-20 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-00-00-00
	* New implementation of Multiprocess EP
	* for details see https://twiki.cern.ch/twiki/bin/view/CMS/FUEventProcessor
	* this is the branch tag for 327 compat
	
2009-10-19 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-00-00
	* New implementation of Multiprocess EP
	* for details see https://twiki.cern.ch/twiki/bin/view/CMS/FUEventProcessor

2009-09-18 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V01-04-13
	* fix warning on cast loses precision for 64 bit 

2009-09-18 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V01-04-11/12
	* update of includes for FW compat by wmtan

2009-07-02 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V01-04-10
	* put back missed setting of prescale index to PSservice and add dqmhistos to modmap

2009-07-02 Emilio Meschi <emilio.meschi@cern.ch>
	
	* tags 08-09 used to introduce and back off a FW change
	
2009-02-17  Emilio Meschi  <emilio.meschi@cern.ch>
		
	* tag V01-04-07
	* small fix to spotlight web must bump up version no

2009-02-17  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-04-06
	* update version number in web page
